[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Images/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 115, 150 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70, 70 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Hand_Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand_Hitbox"]
shape = SubResource( 1 )

[node name="Play_Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play_Hitbox"]
shape = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.933333, 0.788235, 0.580392, 1 )
polygon = PoolVector2Array( 115, 150, -115, 150, -115, -150, 115, -150 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3.57523, 4.68754 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
[connection signal="input_event" from="Hand_Hitbox" to="." method="_on_Hand_Hitbox_input_event"]
[connection signal="mouse_entered" from="Hand_Hitbox" to="." method="_on_Hand_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hand_Hitbox" to="." method="_on_Hand_Hitbox_mouse_exited"]
[connection signal="input_event" from="Play_Hitbox" to="." method="_on_Play_Hitbox_input_event"]
